Added notebook and .gitignore, updated README

--- a/README.ND
+++ b/README.ND
@@ -17,6 +17,8 @@ potato-disease-prediction/
  ├── sample_leaf.jpg
  └── README.md 
 
+Dataset used: PlantVillage
+
 Technologies Used
   Python
   Numpy
